# exercises

./: .gitignore  README.md
base/: logs.h
cpp/books/The-Modern-Cpp-Challenge/boost_asio_read_url/: CMakeLists.txt  main.cpp
cpp/books/The-Modern-Cpp-Challenge/ex1/: ex_1_1.pro  test1.cpp  test1.h
cpp/books/The-Modern-Cpp-Challenge/ipaddr/: ipaddr.cpp  ipaddr.h  test1.cpp
cpp/books/The-Modern-Cpp-Challenge/ipaddr/ipaddr/: ipaddr.cpp  ipaddr.h
cpp/boost/shared_ptr/: CMakeLists.txt  main.cpp  test1.cpp
cpp/boost/test/: CMakeLists.txt  test1.cpp  test2.cpp
cpp/boost/types/: CMakeLists.txt  test1.cpp  test1.h  test2.cpp
cpp/modern_cpp/0_string_view/: test1.cpp  test1.h
cpp/modern_cpp/classes/friends/: CMakeLists.txt  main.cpp  test1.cpp
cpp/modern_cpp/command_dispatcher_tuples_variadic_templates/: clean_project.sh  main.cpp
cpp/modern_cpp/common/: move_only_class.cpp  move_only_class.h
cpp/modern_cpp/containers/unordered_set/: main.cpp  test1.cpp  test2.cpp  test2.h  test3.cpp  test3.h
cpp/modern_cpp/deleted_functions/: deleted_functions.pro  test1.cpp  test1.h
cpp/modern_cpp/if_constexpr/: if_constexpr.pro  test1.cpp  test1.h
cpp/modern_cpp/initialization/: test1.cpp
cpp/modern_cpp/lambda/: CMakeLists.txt  test1.cpp
cpp/modern_cpp/macroses/: test1.cpp
cpp/modern_cpp/move_semantics/move_constructor/: main.cpp  move_constructor.pro  test1.cpp  test1.h  test2.cpp  test2.h  test3.cpp  test3.h
cpp/modern_cpp/move_semantics/perfect_forwarding/: CMakeLists.txt  main.cpp  perfect_forwarding.pro  test1.cpp  test1.h  test2.cpp  test2.h  test3.cpp  test3.h
cpp/modern_cpp/multithreading/data_races/data_races_example/: cmd_line.cpp  cmd_line.h  data_races_example.pro  main.cpp  stack_common.h  stack_data_races.h  stack_impl1.h  stack_impl2.h  test1.cpp  test1.h
cpp/modern_cpp/multithreading/deadlocks/: CMakeLists.txt  deadlocks.pro  main.cpp  test1.cpp  test1.h  test2.cpp  test2.h
cpp/modern_cpp/multithreading/futures/: CMakeLists.txt  futures.pro  main.cpp  test1.cpp  test1.h  test2.cpp  test2.h  test3.cpp  test3.h
cpp/modern_cpp/multithreading/packaged_tasks/: CMakeLists.txt  packaged_tasks.pro  test1.cpp  test1.h
cpp/modern_cpp/multithreading/synchronizing/cond_variable/: cond_variable.pro  test1.cpp  test1.h  test2.cpp  test2.h  test3.cpp  test3.h
cpp/modern_cpp/multithreading/threads_basic/: CMakeLists.txt  main.cpp  test1.cpp  test1.h  test2.cpp  test2.h  test3.cpp  test3.h  threads_basic.pro
cpp/modern_cpp/nullptr/: CMakeLists.txt  main.cpp  nullptr_pro.pro
cpp/modern_cpp/overload_and_conversions/: test1.cpp
cpp/modern_cpp/override_final/: Makefile  logs.h  main.cpp  override.pro  test1.cpp  test1.h  test2.cpp  test2.h  test3.cpp  test3.h
cpp/modern_cpp/search-in-a-scope/: test1.cpp
cpp/modern_cpp/smart_pointers/: CMakeLists.txt  clean_project.sh  main.cpp  test1.cpp  test1.h  test2.cpp  test2.h
cpp/modern_cpp/static_assert/: main.cpp
cpp/modern_cpp/tuple/iterate_tuple/: CMakeLists.txt  main.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test7.cpp  test8.cpp  test9.cpp
cpp/modern_cpp/types/scoped_enums/: main.cpp
cpp/modern_cpp/types/std_variant/: main.cpp  std_variant.pro  test1.cpp  test1.h  test2.cpp  test2.h
cpp/modern_cpp/variadic_templates/: CMakeLists.txt  main.cpp  test1.cpp  test2.cpp  test2.h  variadic_templates.pro
cpp/patterns/command_dispatcher/: parser_cmd_connect.h  parser_cmd_send_message.h  test1.cpp
cpp/patterns/command_line/: main.cpp
cpp/patterns/iterators/: CMakeLists.txt  field.hpp  main.cpp  message.cpp  message.h  message_parser.cpp  message_parser.h  message_parser_sign_in.cpp  message_parser_sign_in.h  test1.cpp  test10.cpp  test5.cpp  test6.cpp  tests.h  types.h
cpp/seminars/memory/: CMakeLists.txt  main.cpp  mem-map
cpp/templates/nested_types/: CMakeLists.txt  main.cpp  test1.cpp  test2.cpp  test2.h
cpp/templates/sfinae/: main.cpp  sfinae.pro  test1.cpp  test1.h
